--- a/apache-config-file.conf
+++ b/apache-config-file.conf
@@ -4,7 +4,7 @@
         DirectoryIndex index.html
         AllowOverride All
         Order allow,deny
-        Allow from all
+        Require ip 10.22.1.0/24
     </Directory>
    ServerName groupa.ucsc.edu
 </VirtualHost>
@@ -15,7 +15,7 @@
         DirectoryIndex index.html
         AllowOverride All
         Order allow,deny
-        Allow from all
+        Require ip 10.22.2.0/24
     </Directory>
    ServerName groupb.ucsc.edu
 </VirtualHost>
