--- a/apache-config-file.conf
+++ b/apache-config-file.conf
@@ -1,5 +1,8 @@
 <VirtualHost 10.22.1.254:80>
     DocumentRoot "/usr/local/apache2/htdocs"
+    <Location />
+        Require ip 10.22.1.0/24
+    </Location>
     <Directory "/usr/local/apache2/htdocs">
         DirectoryIndex index.html
         AllowOverride All
@@ -11,6 +14,9 @@
 
 <VirtualHost 10.22.2.254:80>
     DocumentRoot "/usr/local/apache2/htdocs"
+    <Location />
+        Require ip 10.22.2.0/24
+    </Location>
     <Directory "/usr/local/apache2/htdocs">
         DirectoryIndex index.html
         AllowOverride All
