--- a/apache-config-file.conf
+++ b/apache-config-file.conf
@@ -1,13 +1,17 @@
 <VirtualHost 10.22.1.254:80>
+    Order deny,allow
+    Deny from all
+    Allow from 10.22.1
     DocumentRoot "/usr/local/apache2/htdocs"
-    Require ip 10.22.1.1
     DirectoryIndex index.html
     ServerName groupa.ucsc.edu
 </VirtualHost>
 
 <VirtualHost 10.22.2.254:80>
+    Order deny,allow
+    Deny from all
+    Allow from 10.22.2
     DocumentRoot "/usr/local/apache2/htdocs"
-    Require ip 10.22.2.1
     DirectoryIndex index.html
     ServerName groupb.ucsc.edu
 </VirtualHost>
